# share-and-tell

./: .gitignore  Dockerfile  PERFORMANCE_ANALYSIS.md  README.md  TODO.md  copilot-instructions.md  docker-compose.yml  environment.yml  large_scale_test.py  million_file_test.py  package.json  performance_benchmark.py  pyproject.toml  test_output  test_output_with_comments.json
.github/workflows/: ci.yml
docs/: developer-notes.md  example-report.html  test-release-job.md
electron-app/: package-lock.json  package.json  tsconfig.json
electron-app/scripts/: check-dist.cjs  copy-assets.cjs  copy-assets.js
electron-app/src/main/: main.ts  preload.js  preload.ts
electron-app/src/renderer/: global.d.ts  index.html  renderer.ts  styles.css
electron-app/src/shared/: shareAndTell.ts  types.ts
reports/: .gitignore
src/share_and_tell/: __init__.py  cancellable_scanner.py  cli.py  output.py  scanner.py  scanner_optimized.py
tests/: test_cli.py  test_output.py  test_scanner.py
